@@ -3,14 +3,16 @@ Hash: SHA256
 
 DIST htmlentities-4.2.2.gem 31232 RMD160 8cd2460ecf15a6821459807778015515ef812f7f SHA1 1d9c37cd6d0914f73899fda713e602828b7c9f1b SHA256 f160a3406ebe538f99ed91a7a501c769dc3f79b74b999f91f41dd2b1db289653
 DIST htmlentities-4.2.4.gem 33280 RMD160 e1d91a678d327563d7fa3c0cdc11a46e05377806 SHA1 c80f7f25fe79bc58d44ce465745c0447e1e9e2bd SHA256 d025e7f19768ca37aebac237c2c86300a0c38e6a56df0f7b3073abc4fa577837
+DIST htmlentities-4.3.0.gem 31744 RMD160 e6f0c229207230eb3daa5d21a77d7598e8885e96 SHA1 4730c04c245e8b7a1f8a38ed7e5cce27cbc9e7e3 SHA256 3f99bd7a5d0de5d323ee43f71b2b775d029bdbf24dc747a2c8717460a6fc4615
 EBUILD htmlentities-4.2.2.ebuild 721 RMD160 11ca9314f19a3f05f434a595c16a72cabe69f869 SHA1 f037d95c4e9fd4ff299a326fa3cc1270f32d82c0 SHA256 4720b264fc62a0279c265c8cbcd3d5abdb8f0b96ec0218da0c78298c8fd4dcdb
 EBUILD htmlentities-4.2.4.ebuild 726 RMD160 e1d5114db90131c982b4921319247c2bd8d5737c SHA1 9fce1a4a4c13a1b3253734d303ee647296f47c8a SHA256 fdf7244fb5a0cce1be39b1cfa37a510ca5f9d78f290ba920e4c71236bab0517c
-MISC ChangeLog 3622 RMD160 45189baf97e14040044c3ffaa03747ab8133ef9b SHA1 ad08f4ea21c49ac3e6e30fb2ef710916d7e6f2fd SHA256 9501e2faafec35cdb0f4ee0811b64644d32c26bf430dcf47b95e8387b31b3060
+EBUILD htmlentities-4.3.0.ebuild 722 RMD160 0e82a5fda1b63d358af4f5435060f4e3f1b75324 SHA1 f068646e4a164f18f0642a19d7ba4bdc75e819cd SHA256 ce938f4b099c669217cc911e63af37aac3e32c55d42735e6c72d806c3c314455
+MISC ChangeLog 3754 RMD160 a29bc1c4db440a8cd63f4f20a3564fc7ef01040a SHA1 4918d14696fc1e04458abf142c10249019f38920 SHA256 05e5132f46c70a9b90a20faf68bf44d3e987fe9cf097625237dc72729b66a298
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk2hTmIACgkQrnu0mw69JkoMBAD/fW/d+yDrqDL/MR5a8FsUzy0w
-qQDf6hQULbbwbxpZNOgA/A6p7pZlqmJPDn08ndzPTm/sIYWe9OpyeVAoyfgDJnEC
-=UHdg
+iF4EAREIAAYFAk2hT3YACgkQrnu0mw69Jkrx1wD7BVSz/2R5eXMyvJGSD6K8ACZy
+t3petLYBt3fz5C7De74BAJJ7C2NnBHNkMxs5BjS3g46fhq9zCmIKN8cZ053plEwN
+=Oskb
 -----END PGP SIGNATURE-----
