@@ -3,17 +3,14 @@ Hash: SHA256
 
 DIST httpclient-2.1.5.2.tar.gz 222819 RMD160 0fdc37bb6dbf518f864f295c3cbf277d5c8852f3 SHA1 754d3063e93279dfa2240064634af92e59e653a1 SHA256 48cae202b8cd00862b16aafb36023481cce63698de9d8e041c696f7e5ba8e601
 DIST httpclient-2.1.6.1.tar.gz 253500 RMD160 bd66389b6c0c5dbf51129a8e3986640dc7c3854c SHA1 f420e20b7c6ac10e8eabce0d9bcf436e8e588da8 SHA256 b79b6dc73ce859dffae96fe138d9163e1c801ffa7604f0afe2c5dcc321edb6d7
-DIST httpclient-2.1.6.tar.gz 253483 RMD160 65716afc2e908e6365ed41b01aedd371c8efcf57 SHA1 d34f950a6dd48854b94afdcdbb48ec9198995d1d SHA256 ed72d2c32ad2d21c375ad04730f441c9948027850f1b55a7bd3b66e4932b00e3
 EBUILD httpclient-2.1.5.2-r1.ebuild 894 RMD160 e9c9871c3b92666c7e8aaa69f9fdd6626715659a SHA1 381aa6fdbab29322563efb61d14436578ba1abae SHA256 3c889051bc3a98706f7bd56129ca545709a5e071b4f3097c0ff2567a7c73cca8
-EBUILD httpclient-2.1.5.2-r2.ebuild 1099 RMD160 ce3f2488f0b80f69d3153536790b9a23f88a9357 SHA1 82abe0b561b8a421087ce52245ebaf29f8580bac SHA256 19213a0b519a8f795e39cf9cb7c383e9810f5fd20f1eb349f641a47df35949d3
 EBUILD httpclient-2.1.6.1.ebuild 1095 RMD160 3841b5b4388f44fff34ab7b82e93d7dd808c00f9 SHA1 b51f2e71cc345736a10c5699e794c335d22668d0 SHA256 ce3f55ca7a291743883b60b10058bee30dc674bbbce668ca27398c25b64a2bc6
-EBUILD httpclient-2.1.6.ebuild 1093 RMD160 035126859d2ebecdf772e3ac9dd58a9e27d3321d SHA1 2071de327fc217226fbac3d3d65a7766b1d5c556 SHA256 e9fc160f5624fd89adfea498f05f7a48ae22e9b8e5c8f92cfd02a09a347a4fdd
-MISC ChangeLog 3453 RMD160 7d346ab3b85136a07a2d3b4a18dcc7491250ca8a SHA1 0f883673191c7ee686e86907095c0828f915b708 SHA256 a26d2a010fead235ec574f14a9f5e07cc89c5ca36c5e035565d4f3f34a2cc61a
+MISC ChangeLog 3586 RMD160 c565ce47292d1b7c651303f28f74c437f8c2d21a SHA1 81a213316b0a56cee01c7d9aecaab4bb139d1172 SHA256 f819b2f40e9f05511a7fc5717f94d5cf7ec4203bdc8dabbc4e7183468b89c2d9
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.16 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk0oPGAACgkQrnu0mw69Jkp/lwD6Avmefj0wtJhMQUEXneijj9IE
-NZvb7tiddAktR9TpkoUA/2VdSjDjcywctho03hb6cMM8GjqY/du0NJM3hMimmJfS
-=nIQV
+iF4EAREIAAYFAk2hT7wACgkQrnu0mw69Jko6DwD/QXV4Zg3CDt92N40Av7/NNpxj
+o9mmocqPyjrqJK2rUTQA/A+SOur50PSUQoI2nQbSH8wDkYyPUX84VsERYJ3XXa8G
+=eomm
 -----END PGP SIGNATURE-----
