@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/htmlentities
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/htmlentities/ChangeLog,v 1.24 2011/04/10 06:29:49 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/htmlentities/ChangeLog,v 1.25 2011/04/10 06:34:24 graaff Exp $
+
+*htmlentities-4.3.0 (10 Apr 2011)
+
+  10 Apr 2011; Hans de Graaff <graaff@gentoo.org>
+  +htmlentities-4.3.0.ebuild:
+  Version bump.
 
   10 Apr 2011; Hans de Graaff <graaff@gentoo.org>
   -htmlentities-4.2.2-r1.ebuild, -htmlentities-4.2.3.ebuild:
